[package]
name = "super-blank-project"
version = "0.2.0"


[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"


[dependencies]
rp2040-hal = { version="0.10.0", features = ["critical-section-impl"] }
panic-halt = "0.2.0"
embedded-hal = "1.0.0" #{ version = "1.0.0", features = ["unproven"] }
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.3.0"
embedded-graphics-core = "0.4.0"
#critical-section = "1.1"

[dependencies.embedded-graphics]
version = "0.8.1"
optional = true

[[bin]]
name = "blinky"
path = "blinky.rs"


[features]
default = ["graphics"]
graphics = ["embedded-graphics"]